# c_yt_course

./: .gitignore  CMakeLists.txt  README.md  basico  bee_1045_triangulos  bee_1906_romanos  bee_1906_romanos_seq  complex  condic  exercicio_resolvido_1  expressoes  hello.c  repeticao_do  repeticao_for  repeticao_while  selecao  var_logica  vars  vars_complexas  vars_inteiras  vars_logicas  vars_reais
ed_grafos/: CMakeLists.txt  bee_1191_recuperacao_arvore.c  bee_1194_prefixa_infixa_posfixa.c  bee_1195_arvore_binaria_busca.c  bee_1200_operacoes_abp_i.c  bee_1201_operacoes_abp_ii.c  grafos.md
estrut_controle/: CMakeLists.txt  basico.c  bee_1045_triangulos.c  bee_1045_triangulos_if.c  bee_1906_romanos_seq.c  condic.c  estruturas.md  ex_resolvido_if.c  ex_resolvido_switch.c  selecao.c
estrut_repeticao/: CMakeLists.txt  bee_1029_fibonacci.c  bee_1119_fila_desempregados.c  repeticao_do.c  repeticao_for.c  repeticao_while.c  repeticoes.md
operadores_expressoes/: CMakeLists.txt  expressoes.c  operadores_expressoes.md
temp/: teste.c
tipos_vars_consts/: CMakeLists.txt  tipos_vars_conts.md  vars_reais.c
vars_consts/: CMakeLists.txt  complex.c  hello.c  variaveis.md  vars.c  vars_complexas.c  vars_inteiras.c  vars_logicas.c
