cmake_minimum_required(VERSION 3.28)
project(c_yt_course C)

set(CMAKE_C_STANDARD 99)

add_executable(bee_1191_recuperacao_arvore bee_1191_recuperacao_arvore.c)
add_executable(bee_1194_prefixa_infixa_posfixa bee_1194_prefixa_infixa_posfixa.c)
add_executable(bee_1195_arvore_binaria_busca bee_1195_arvore_binaria_busca.c)
add_executable(bee_1200_operacoes_abp_i bee_1200_operacoes_abp_i.c)
add_executable(bee_1201_operacoes_abp_ii bee_1201_operacoes_abp_ii.c
        bee_1201_operacoes_abp_ii.c)
