cmake_minimum_required(VERSION 3.28)
project(c_yt_course C)

set(CMAKE_C_STANDARD 99)

add_executable(repeticao_for repeticao_for.c)
add_executable(repeticao_while repeticao_while.c)
add_executable(repeticao_do.c repeticao_do.c)
add_executable(bee_1029_fibonacci bee_1029_fibonacci.c)
add_executable(bee_1119_fila_desempregados bee_1119_fila_desempregados.c)
